[project]
name = "reddit-slack-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.5",
    "azure-identity>=1.17.1",
    "azure-mgmt-kubernetesconfiguration>=3.1.0",
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "cloup>=3.0.5",
    "colorama>=0.4.6",
    "colorlog>=6.8.2",
    "cron-descriptor>=1.4.5",
    "cryptography>=43.0.1",
    "docker>=7.1.0",
    "durations-nlp>=1.0.1",
    "humanfriendly>=10.0",
    "imageio[ffmpeg]>=2.35.1",
    "kubernetes>=30.1.0",
    "pillow>=10.4.0",
    "praw>=7.7.1",
    "psutil>=6.0.0",
    "psycopg[binary]>=3.2.2",
    "pyjwt[crypto]>=2.9.0",
    "pyte>=0.8.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.6",
    "tabulate>=0.1.dev612",
    "tqdm>=4.66.5",
    "word2number>=1.1",
    "xlsxwriter>=3.2.0",
    "yfinance>=0.2.43",
    "babel>=2.16.0",
    "mattermostdriver>=7.3.2",
    "slack-bolt>=1.23.0",
    "python-dotenv>=1.1.0",
    "treelib>=1.8.0",
]

[tool.uv.sources]
tabulate = { git = "https://github.com/gschizas/python-tabulate.git" }

#[tool.rye.scripts]
#slack-bot-reddit-greece = { cmd = ["python", "src/slack_bot.py"], env-file = ".env.d/slack-bot-reddit-greece.env" }
#slack-bot-reddit-europe = { cmd = ["python", "src/slack_bot.py"], env-file = ".env.d/slack-bot-reddit-europe.env" }
